--- a/webshot/package.json
+++ b/webshot/package.json
@@ -9,5 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "puppeteer": "0.11.0"
+  }
 }
