--- a/template/puppeteer/Dockerfile
+++ b/template/puppeteer/Dockerfile
@@ -1,29 +1,30 @@
-FROM node:8.9.1-alpine
+FROM node:8-slim
 
-RUN addgroup -S app && adduser -S -g app app
+RUN apt-get update && \
+    apt-get install -yq gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+    libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
+    libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 \
+    libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 \
+    fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont \
+    ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget && \
+    wget https://github.com/Yelp/dumb-init/releases/download/v1.2.1/dumb-init_1.2.1_amd64.deb && \
+    dpkg -i dumb-init_*.deb && rm -f dumb-init_*.deb && \
+    apt-get clean && apt-get autoremove -y && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /home/app
+RUN yarn global add puppeteer@1.3.0 && yarn cache clean
 
-RUN apk --no-cache upgrade && apk add --no-cache chromium
+ENV NODE_PATH="/usr/local/share/.config/yarn/global/node_modules:${NODE_PATH}"
 
 # Alternatively use ADD https:// (which will not be cached by Docker builder)
-RUN apk --no-cache add curl \
-    && echo "Pulling watchdog binary from Github." \
-    && curl -sSL https://github.com/openfaas/faas/releases/download/0.7.1/fwatchdog > /usr/bin/fwatchdog \
-    && curl -sSL https://github.com/sambaiz/puppeteer-lambda-starter-kit/raw/master/chrome/headless_shell-67.0.3361.0.tar.gz > /home/app/HeadlessChrome.tar.gz \
-    && chmod +x /usr/bin/fwatchdog \
-    && apk del curl --no-cache
-
-# Extract headless chromw
-WORKDIR /home/app
-RUN tar -xvzf HeadlessChrome.tar.gz
+ADD https://github.com/openfaas/faas/releases/download/0.8.0/fwatchdog /usr/bin
+RUN chmod +x /usr/bin/fwatchdog
 
 WORKDIR /root/
 
 # Turn down the verbosity to default level.
 ENV NPM_CONFIG_LOGLEVEL warn
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
+RUN mkdir -p /home/app
 
 # Wrapper/boot-strapper
 WORKDIR /home/app
@@ -47,17 +48,25 @@ COPY function/ ./
 # Set correct permissions to use non root user
 WORKDIR /home/app/
 
-# chmod for tmp is for a buildkit issue (@alexellis)
-RUN chown app:app -R /home/app \
-    && chmod 777 /tmp \
-    && chmod +x /home/app/headless_shell
+# Add user so we don't need --no-sandbox.
+RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
+    && mkdir -p /home/pptruser/Downloads \
+    && chown -R pptruser:pptruser /home/pptruser \
+    && chown -R pptruser:pptruser /home/app \
+    && chown -R pptruser:pptruser /usr/local/share/.config/yarn/global/node_modules \
+    && chmod 777 /tmp
 
-USER app
+# Run everything after as non-privileged user.
+USER pptruser
+
+# --cap-add=SYS_ADMIN
+# https://docs.docker.com/engine/reference/run/#additional-groups
 
 ENV cgi_headers="true"
 ENV fprocess="node index.js"
 
 HEALTHCHECK --interval=1s CMD [ -e /tmp/.lock ] || exit 1
 
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["fwatchdog"]
 
