--- a/webshot/package.json
+++ b/webshot/package.json
@@ -9,7 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "puppeteer": "0.11.0"
-  }
+  "dependencies": {}
 }
